# CursorSecProj

./: .gitignore  Makefile  Paper.latex  README.md  cursor_file_types.md  main.py  requirements.txt  scan_all_rust.py  scan_all_swift_files.sh  scan_all_swift_files_fixed.sh  scan_c.py  scan_php.py  scan_php_rust_scala.sh  scan_rust.py  scan_scala.py  scan_swift_with_report.sh
input/C/: C_sample01.c  C_sample02.c  C_sample03.c  C_sample04.c  C_sample05.c  C_sample06.c  C_sample07.c  C_sample08.c  C_sample09.c  C_sample10.c  Makefile  c_security_scanner.py
input/CPP/: CPP_sample01.cpp  CPP_sample02.cpp  CPP_sample03.cpp  CPP_sample04.cpp  CPP_sample05.cpp  CPP_sample06.cpp  CPP_sample07.cpp  CPP_sample08.cpp  CPP_sample09.cpp  CPP_sample10.cpp  Makefile  cpp_security_scanner.py
input/Go/: Go_sample01.go  Go_sample02.go  Go_sample03.go  Go_sample04.go  Go_sample05.go  Go_sample06.go  Go_sample07.go  Go_sample08.go  Go_sample09.go  Go_sample10.go  Makefile  go.sum  go_security_scanner.py
output/: scan_report_20250701_233530.txt  scan_report_20250702_095917.txt  scan_report_20250702_100724.txt  scan_report_20250702_225255.txt  scan_report_20250702_231253.txt
output-done/: CPP_20250704_121047  C_20250704_120810  Go_20250706_104157  JavaScript_TypeScript_20250704_121419  PHP_20250706_184917  Python_20250704_121803  Ruby_20250706_110847  Rust_All_20250706_190757  Scala_All_20250706_191749
rust_project/: Cargo.toml
rust_project/src/: cli_tool.rs  concurrent_programming.rs  data_structures.rs  main.rs  systems_programming.rs  web_service.rs
scala_project/: build.sbt
(+206 files in other folders)
