[package]
name = "rust_security_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.0"
actix-rt = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.0"
libc = "0.2" 